--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,8 +1,9 @@
 .section{
     padding: 20px;
-    width: 45%
+    width: 35%
 }
 
 .section_title{
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    font-size: 26px;
 }
